--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <section class="hero">
         <div class="container">
             <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
-            <button type="button" class="btn">Заказать услугу</button> 
+            <button type="button" class="btn" data-modal-open>Заказать услугу</button> 
         </div>
     </section>
     <section  class="features">
@@ -89,9 +89,12 @@
         <div class="container">
             <h2 class="about-title">Чем мы занимаемся</h2>
                 <ul class="about-list">
-                    <li class="about-img-link"><img src="./images/img1.jpg" class="about-img" alt="Написание кода" width="370"></li>
-                    <li class="about-img-link"><img src="./images/img2.jpg" class="about-img" alt="Создание удобного сайта" width="370"></li>
-                    <li class="about-img-link"><img src="./images/img3.jpg" class="about-img" alt="Разработка дизайна" width="370"></li>
+                    <li class="about-img-link"><img src="./images/img1.jpg" class="about-img" alt="Десктопные приложения" width="370">
+                        <p class="about-text">Десктопные приложения</p></li>
+                    <li class="about-img-link"><img src="./images/img2.jpg" class="about-img" alt="Мобильные приложения" width="370">
+                        <p class="about-text">Мобильные приложения</p></li>
+                    <li class="about-img-link"><img src="./images/img3.jpg" class="about-img" alt="Дизайнерские решения" width="370">
+                        <p class="about-text">Дизайнерские решения</p></li>
                 </ul>
         </div>
     </section>
@@ -260,5 +263,15 @@
             </ul></div>
         </div>
     </footer>
+    <div class="dackdrop is-hidden" data-modal> 
+        <div class="modal">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste aperiam reprehenderit neque officiis aut? Velit dolorem doloribus reiciendis nobis quasi dolorum molestias in quas. Non minima deleniti asperiores, dicta laborum velit eveniet sapiente eius? Voluptatem ad unde rerum laudantium eius!
+            </p>
+            <button class="close-btn" data-modal-close><svg class="icon-close" width="18" height="18">
+                <use href="./images/symbol-defs.svg#icon-close">
+                </use></svg></button>
+        </div>
+    </div>
+    <script src="./js/modal.js"></script>
 </body>
 </html>
