add all transitions

--- a/index.html
+++ b/index.html
@@ -232,13 +232,13 @@
             <a href="./index.html" class="footer-logo"><span class="span-logo">Web</span>Studio</a></li>
             <address>
             <ul class="contacts-footer">
-            <li class="footer-con"><a href="https://goo.gl/maps/pPcLnvjaUrZ2ZYLMA" 
+            <li><a href="https://goo.gl/maps/pPcLnvjaUrZ2ZYLMA" 
                 target="_blank" 
                 rel="noopener nofollow"
                 class="address">
                 г. Киев, пр-т Леси Украинки, 26</a> </li>
-            <li class="address"><a href="mailto:info@example.com" class="contacts">info@example.com</a></li>
-            <li class="address"><a href="tel:+380991111111" class="contacts">+38 099 111 11 11</a></li>
+            <li><a href="mailto:info@example.com" class="address contacts">info@example.com</a></li>
+            <li><a href="tel:+380991111111" class="address contacts">+38 099 111 11 11</a></li>
             </ul>
             </address> </div>
             <div class="join">
