--- a/portfolio.html
+++ b/portfolio.html
@@ -49,91 +49,82 @@
                 <li class="portfolio-item">
                     <a href="" class="portfolio-card-link">
                     <img src="./images/portfolio1.jpg" alt="открытая страница вайта" width="370">
-                    <div class="portfolio-overlay"><p>Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p></div>
+                    <div class="portfolio-overlay"><p>Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p></div></a>
                     <div class="portfolio-card">
                         <h2 class="portfolio-title">Технокряк</h2>
                         <p class="portfolio-text">Веб-сайт</p>
-                    </a>
                     </div>
                 </li>
                 <li class="portfolio-item">
                     <a href="" class="portfolio-card-link">
                     <img src="./images/portfolio2.jpg" alt="плакат с баскетболистами" width="370">
-                    <div class="portfolio-overlay"><p>Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p></div>
+                    <div class="portfolio-overlay"><p>Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p></div></a>
                     <div class="portfolio-card">
                         <h2 class="portfolio-title">Постер New Orlean vs Golden Star</h2>
                         <p class="portfolio-text">Дизайн</p>
-                    </a>
                     </div>
                 </li>
                 <li class="portfolio-item">
                     <a href="" class="portfolio-card-link">
                     <img src="./images/portfolio3.jpg" alt="логотип ресторана" width="370">
-                    <div class="portfolio-overlay"><p>Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p></div>
+                    <div class="portfolio-overlay"><p>Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p></div></a>
                     <div class="portfolio-card">
                         <h2 class="portfolio-title">Ресторан Seafood</h2>
                         <p class="portfolio-text">Приложение</p>
-                    </a>
                     </div>
                 </li>
                 <li class="portfolio-item">
                     <a href="" class="portfolio-card-link">
                     <img src="./images/portfolio4.jpg" alt="наушники" width="370">
-                    <div class="portfolio-overlay"><p>Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p></div>
+                    <div class="portfolio-overlay"><p>Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p></div></a>
                     <div class="portfolio-card">
                         <h2 class="portfolio-title">Проект Prime</h2>
                         <p class="portfolio-text">Маркетинг</p>
-                    </a>
                     </div>
                 </li>
                 <li class="portfolio-item">
                     <a href="" class="portfolio-card-link">
                     <img src="./images/portfolio5.jpg" alt="две коробки" width="370">
-                    <div class="portfolio-overlay"><p>Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p></div>
+                    <div class="portfolio-overlay"><p>Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p></div></a>
                     <div class="portfolio-card">
                         <h2 class="portfolio-title">Проект Boxes</h2>
                         <p class="portfolio-text">Приложение</p>
-                    </a>
                     </div>
                 </li>
                 <li class="portfolio-item">
                     <a href="" class="portfolio-card-link">
                     <img src="./images/portfolio6.jpg" alt="открытая страница сайта" width="370">
-                    <div class="portfolio-overlay"><p>Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p></div>
+                    <div class="portfolio-overlay"><p>Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p></div></a>
                     <div class="portfolio-card">
                         <h2 class="portfolio-title">Inspiration has no Borders</h2>
                         <p class="portfolio-text">Веб-сайт</p>
-                    </a>
                     </div>
                 </li>
                 <li class="portfolio-item">
                     <a href="" class="portfolio-card-link">
                     <img src="./images/portfolio7.jpg" alt="открытый журнал" width="370">
-                    <div class="portfolio-overlay"><p>Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p></div>
+                    <div class="portfolio-overlay"><p>Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p></div></a>
                     <div class="portfolio-card">
                         <h2 class="portfolio-title">Издание Limited Edition</h2>
                         <p class="portfolio-text">Дизайн</p>
-                    </a>
                     </div>
                 </li>
                 <li class="portfolio-item">
                     <a href="" class="portfolio-card-link">
                     <img src="./images/portfolio8.jpg" alt="бирка для продукции" width="370">
-                    <div class="portfolio-overlay"><p>Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p></div>
+                    <div class="portfolio-overlay"><p>Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p></div></a>
                     <div class="portfolio-card">
                         <h2 class="portfolio-title">Проект LAB</h2>
                         <p class="portfolio-text">Маркетинг</p>
-                    </a>
                     </div>
                 </li>
                 <li class="portfolio-item">
                     <a href="" class="portfolio-card-link">
                     <img src="./images/portfolio9.jpg" alt="сайт на мониторе" width="370">
-                    <div class="portfolio-overlay"><p>Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p></div>
+                    <div class="portfolio-overlay"><p>Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p></div></a>
                     <div class="portfolio-card">
                         <h2 class="portfolio-title">Growing Business</h2>
                         <p class="portfolio-text">Приложение</p>
-                    </a>
                     </div>
                 </li>
             </ul>
@@ -146,13 +137,13 @@
             <a href="./index.html" class="footer-logo"><span class="span-logo">Web</span>Studio</a></li>
             <address>
             <ul class="contacts-footer">
-            <li class="footer-con"><a href="https://goo.gl/maps/pPcLnvjaUrZ2ZYLMA" 
+            <li><a href="https://goo.gl/maps/pPcLnvjaUrZ2ZYLMA" 
                 target="_blank" 
                 rel="noopener nofollow"
                 class="address">
-                г. Киев, пр-т Леси Украинки, 26</a> </li>
-            <li class="address"><a href="mailto:info@example.com" class="contacts">info@example.com</a></li>
-            <li class="address"><a href="tel:+380991111111" class="contacts">+38 099 111 11 11</a></li>
+                г. Киев, пр-т Леси Украинки, 26</a></li>
+            <li><a href="mailto:info@example.com" class="address contacts">info@example.com</a></li>
+            <li><a href="tel:+380991111111" class="address contacts">+38 099 111 11 11</a></li>
             </ul>
             </address> </div>
             <div class="join">
