--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
             </ul></div>
         </div>
     </footer>
-    <div class="dackdrop is-hidden" data-modal> 
+    <div class="backdrop is-hidden" data-modal> 
         <div class="modal">
             <p>
             </p>
