--- a/portfolio.html
+++ b/portfolio.html
@@ -48,85 +48,94 @@
             <ul class="portfolio">
                 <li class="portfolio-item">
                     <a href="" class="portfolio-card-link">
+                        <div class="thumb">
                     <img src="./images/portfolio1.jpg" alt="открытая страница вайта" width="370">
-                    <div class="portfolio-overlay"><p>Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p></div></a>
+                    <div class="portfolio-overlay"><p>Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p></div>
+                    </div>
                     <div class="portfolio-card">
                         <h2 class="portfolio-title">Технокряк</h2>
                         <p class="portfolio-text">Веб-сайт</p>
-                    </div>
-                </li>
+                    </div></a></li>
                 <li class="portfolio-item">
                     <a href="" class="portfolio-card-link">
+                        <div class="thumb">
                     <img src="./images/portfolio2.jpg" alt="плакат с баскетболистами" width="370">
-                    <div class="portfolio-overlay"><p>Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p></div></a>
+                    <div class="portfolio-overlay"><p>Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p></div>
+                    </div>
                     <div class="portfolio-card">
                         <h2 class="portfolio-title">Постер New Orlean vs Golden Star</h2>
                         <p class="portfolio-text">Дизайн</p>
-                    </div>
-                </li>
+                    </div></a></li>
                 <li class="portfolio-item">
                     <a href="" class="portfolio-card-link">
+                        <div class="thumb">
                     <img src="./images/portfolio3.jpg" alt="логотип ресторана" width="370">
-                    <div class="portfolio-overlay"><p>Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p></div></a>
+                    <div class="portfolio-overlay"><p>Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p></div>
+                    </div>
                     <div class="portfolio-card">
                         <h2 class="portfolio-title">Ресторан Seafood</h2>
                         <p class="portfolio-text">Приложение</p>
-                    </div>
-                </li>
+                    </div></a></li>
                 <li class="portfolio-item">
                     <a href="" class="portfolio-card-link">
+                        <div class="thumb">
                     <img src="./images/portfolio4.jpg" alt="наушники" width="370">
-                    <div class="portfolio-overlay"><p>Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p></div></a>
+                    <div class="portfolio-overlay"><p>Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p></div>
+                    </div>
                     <div class="portfolio-card">
                         <h2 class="portfolio-title">Проект Prime</h2>
                         <p class="portfolio-text">Маркетинг</p>
-                    </div>
-                </li>
+                    </div></a></li>
                 <li class="portfolio-item">
                     <a href="" class="portfolio-card-link">
+                        <div class="thumb">
                     <img src="./images/portfolio5.jpg" alt="две коробки" width="370">
-                    <div class="portfolio-overlay"><p>Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p></div></a>
+                    <div class="portfolio-overlay"><p>Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p></div>
+                    </div>
                     <div class="portfolio-card">
                         <h2 class="portfolio-title">Проект Boxes</h2>
                         <p class="portfolio-text">Приложение</p>
-                    </div>
-                </li>
+                    </div></a></li>
                 <li class="portfolio-item">
                     <a href="" class="portfolio-card-link">
+                        <div class="thumb">
                     <img src="./images/portfolio6.jpg" alt="открытая страница сайта" width="370">
-                    <div class="portfolio-overlay"><p>Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p></div></a>
+                    <div class="portfolio-overlay"><p>Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p></div>
+                    </div>
                     <div class="portfolio-card">
                         <h2 class="portfolio-title">Inspiration has no Borders</h2>
                         <p class="portfolio-text">Веб-сайт</p>
-                    </div>
-                </li>
+                    </div></a></li>
                 <li class="portfolio-item">
                     <a href="" class="portfolio-card-link">
+                        <div class="thumb">
                     <img src="./images/portfolio7.jpg" alt="открытый журнал" width="370">
-                    <div class="portfolio-overlay"><p>Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p></div></a>
+                    <div class="portfolio-overlay"><p>Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p></div>
+                    </div>
                     <div class="portfolio-card">
                         <h2 class="portfolio-title">Издание Limited Edition</h2>
                         <p class="portfolio-text">Дизайн</p>
-                    </div>
-                </li>
+                    </div></a></li>
                 <li class="portfolio-item">
                     <a href="" class="portfolio-card-link">
+                        <div class="thumb">
                     <img src="./images/portfolio8.jpg" alt="бирка для продукции" width="370">
-                    <div class="portfolio-overlay"><p>Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p></div></a>
+                    <div class="portfolio-overlay"><p>Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p></div>
+                    </div>
                     <div class="portfolio-card">
                         <h2 class="portfolio-title">Проект LAB</h2>
                         <p class="portfolio-text">Маркетинг</p>
-                    </div>
-                </li>
+                    </div></a></li>
                 <li class="portfolio-item">
                     <a href="" class="portfolio-card-link">
+                        <div class="thumb">
                     <img src="./images/portfolio9.jpg" alt="сайт на мониторе" width="370">
-                    <div class="portfolio-overlay"><p>Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p></div></a>
+                    <div class="portfolio-overlay"><p>Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p></div>
+                    </div>
                     <div class="portfolio-card">
                         <h2 class="portfolio-title">Growing Business</h2>
                         <p class="portfolio-text">Приложение</p>
-                    </div>
-                </li>
+                    </div></a></li>
             </ul>
         </div>
         </section>
